--- a/views/survey.html
+++ b/views/survey.html
@@ -258,13 +258,12 @@
                 // AJAX post the data to the friends API.
                 $.post("/api/friends", userData, function (data) {
 
-                    console.log(data);
-                    // // Grab the result from the AJAX post so that the best match's name and photo are displayed.
-                    // $("#match-name").text(data.name);
-                    // $("#match-img").attr("src", data.photo);
+                    // Grab the result from the AJAX post so that the best match's name and photo are displayed.
+                    $("#match-name").text(data.friend_name);
+                    $("#match-img").attr("src", data.friend_img);
 
-                    // // Show the modal with the best match
-                    // $("#results-modal").modal("toggle");
+                    // Show the modal with the best match
+                    $("#results-modal").modal("toggle");
 
                 });
             } else {
