--- a/views/survey.html
+++ b/views/survey.html
@@ -256,7 +256,7 @@
                 };
 
                 // AJAX post the data to the friends API.
-                $.post("/api/match", userData, function (data) {
+                $.post("/api/friends", userData, function (data) {
 
                     // Grab the result from the AJAX post so that the best match's name and photo are displayed.
                     $("#match-name").text(data.friend_name);
